--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,12 @@ spring:
       url: jdbc:mysql://127.0.0.1:3306/iot_card_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&&useSSL=false&useAffectedRows=true
       username: root
       password: 123456
+  rabbitmq:
+    host: 192.168.0.110
+    port: 5672
+    username: tomcat
+    password: 80201288
+    virtual-host: MsgCenter
+    template:
+      exchange: IotSqlExchange
+      routing-key: IotSql
