修改配置文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,11 @@ com:
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/iot_card_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&&useSSL=false&useAffectedRows=true
-      username: root
-      password: 123456
+      url: jdbc:mysql://127.0.0.1:3306/Iot_Card_Db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&&useSSL=false&useAffectedRows=true
+      username: tomcat
+      password: 80201288
   rabbitmq:
-    host: 192.168.0.110
+    host: 127.0.0.1
     port: 5672
     username: tomcat
     password: 80201288
