--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://127.0.0.1:3306/Iot_Card_Db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&&useSSL=false&useAffectedRows=true
-      username: tomcat
-      password: 80201288
+      username: root
+      password: ROOT
   rabbitmq:
-    host: 127.0.0.1
+    host: 192.168.0.110
     port: 5672
     username: tomcat
     password: 80201288
@@ -17,3 +17,5 @@ spring:
     template:
       exchange: IotSqlExchange
       routing-key: IotSql
+server:
+  port: 8087
